--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "name": "count-map-pmb",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Extended version of the `count-map` module, providing range filter and easy conversions.",
   "keywords": [
     "count",
@@ -31,9 +31,12 @@
     "count-map": "^1.1.0"
   },
   "devDependencies": {
+    "equal-pmb": "^0.1.24",
     "eslint-config-nodejs-pmb": "^0.2.5",
     "eslint-pretty-pmb": "^1.0.2",
-    "nodemjs": "^0.1.9"
+    "nodemjs": "^0.1.9",
+    "p-fatal": "^0.1.3",
+    "usnam-pmb": "^0.2.5"
   },
 
 
